@@ -1,4 +1,5 @@
 0.02
+ - Fix image type (JPG vs jpg suffix).
 
 0.01 2015-11-12T16:02:38+01:00
  - First version.
